--- a/wp-content/themes/noia-theme/src/styles/components/_banner.scss
+++ b/wp-content/themes/noia-theme/src/styles/components/_banner.scss
@@ -3,13 +3,14 @@
 	display: flex;
 	align-items: flex-start;
 	// align-items: center;
-	height: 65vh;
+	height: 70vh;
 	width: 100%;
 	background-size: cover;
 	background-position: center center;
 	z-index: 2;
 	overflow: hidden;
 	@include mq($until: medium) {
+		height: 65vh;
 		align-items: center;
 	}
 	@include mq(medium) {
@@ -181,7 +182,7 @@
 		height: 65vh;
 		background-size: cover;
 		background-position: center;
-		@include mq(large) {
+		@include mq(medium) {
 			height: 100vh;
 			transform: scale(1.1);
 			
@@ -191,11 +192,12 @@
 			min-height: 100%;
 			max-width: none;
 			position: absolute !important;
-			width: 100%;
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%, -50%);
-
+			@include mq($until: medium) {
+				width: 100%;
+			}
 		}
 		&__button {
 			position: absolute;
